--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ log = "0.4"
 wgpu = "22.0"
 pollster = "0.3"
 bytemuck = { version = "1.16", features = [ "derive" ] }
+clap = { version = "4.5.26", features = ["derive"] }
